# black-widow

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
config/: example_secret.toml
docs/: protocol.md
python/: bw.py  example_router.py  setup.py
src/: main.rs  main_tokio.rs
src/bw/: config.rs  mod.rs  node.rs  packet.rs  protocol.rs  server.rs  vec_stream.rs
src/bw/router/: dumb_router.rs  mod.rs  python_router.rs
src/bw/tunnel/: instance.rs
