[package]
authors = ["eater <hello@eaterofco.de>"]
name = "black-widow"
version = "0.1.0"

[dependencies]
byteorder = "1.2.2"
bytes = "0.4.6"
docopt = "0.8.3"
futures = "0.1.20"
ring = "0.12.1"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
serde = "1.0.36"
serde_derive = "1.0.36"
tokio = "0.1.4"
tokio-core = "0.1.16"
tokio-io = "0.1.6"
tokio-udp = "0.1.0"
toml = "0.4.6"
tun-tap = "0.1.1"
untrusted = "0.5.1"

[dependencies.uuid]
features = ["v4"]
version = "0.6.2"
